[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tonn-mcp"
version = "0.1.0"
description = "MCP server for the RoEx Tonn audio processing API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
tonn-mcp = "tonn_mcp.server:main"
